# MoriaManager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
gamesource/: DT_OrderDecks.json
src/moria_manager/: __init__.py  __main__.py  app.py  logging_config.py
src/moria_manager/assets/: __init__.py  icon_generator.py  loader.py
src/moria_manager/config/: __init__.py  manager.py  path_validator.py  paths.py  schema.py  security.py
src/moria_manager/core/: __init__.py  backup_index.py  backup_service.py  game_detector.py  save_parser.py  trade_data.py  trade_data_embedded.py
src/moria_manager/gui/: __init__.py  backup_panel.py  config_dialog.py  main_window.py  styles.py
src/moria_manager/gui/widgets/: __init__.py  path_selector.py
